Update constants